Created output paths

--- a/Notebooks/Tyre_Quality_Classification.ipynb
+++ b/Notebooks/Tyre_Quality_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPZB/EU7kmktTjL3ncRbrQL",
+      "authorship_tag": "ABX9TyMz01hJpovfK30vXMStZe3y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pinilDissanayaka/Tyre-Quality-Classification/blob/main/Notebooks/Tyre_Quality_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pinilDissanayaka/Tyre-Quality-Classification/blob/team/Notebooks/Tyre_Quality_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2064,19 +2064,43 @@
         "  os.path.join(outDir, '/Model')"
       ],
       "metadata": {
+        "id": "XwsDhhE4K3Xb"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modelDir = os.path.join(outDir, 'Model')\n",
+        "figDir = os.path.join(outDir, 'Figure')\n",
+        "\n",
+        "\n",
+        "if not (os.path.exists(modelDir)):\n",
+        "  print(\"Directory is not exists.......\")\n",
+        "  print(\"making such directory...\")\n",
+        "  os.mkdir(modelDir)\n",
+        "\n",
+        "\n",
+        "if not (os.path.exists(figDir)):\n",
+        "  print(\"Directory is not exists.......\")\n",
+        "  print(\"making such directory...\")\n",
+        "  os.mkdir(figDir)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XwsDhhE4K3Xb",
-        "outputId": "ecfa3041-30f7-4059-de81-70cc4c2bed0b"
+        "id": "XP3Z8-gDMLFq",
+        "outputId": "3d268194-bb31-4373-c310-0424ae1441d2"
       },
-      "execution_count": 14,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Output directory is not exists.......\n",
+            "Directory is not exists.......\n",
             "making such directory...\n"
           ]
         }
@@ -2084,19 +2108,37 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "modelDir = ospath.join(outDir, '/Model')\n",
-        "\n",
-        "\n",
-        "if not (os.path.exists(outDir)):\n",
-        "  print(\"Output directory is not exists.......\")\n",
-        "  print(\"making such directory...\")\n",
-        "  os.mkdir(outDir)\n",
-        "\n",
-        "  os.path.join(outDir, '/Model')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "XP3Z8-gDMLFq"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "7QyvBvxuM1UR",
+        "outputId": "22adee09-574a-4871-fa66-4ae1d088d762"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/output/Model'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s5IgWTYIM-aI"
       },
       "execution_count": null,
       "outputs": []
