--- a/Notebooks/Tyre_Quality_Classification.ipynb
+++ b/Notebooks/Tyre_Quality_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMz01hJpovfK30vXMStZe3y",
+      "authorship_tag": "ABX9TyMg/h6vCduhyYKMfUMuO72c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sp9NJLDlH0fz",
-        "outputId": "ec31f603-b204-4d9c-b19f-c14f52c5150b"
+        "outputId": "9a757485-bf30-4a7f-e7b1-13ddad3788b4"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
             "Requirement already satisfied: numpy>=1.18.1 in /usr/local/lib/python3.10/dist-packages (from visualkeras) (1.23.5)\n",
             "Collecting aggdraw>=1.3.11 (from visualkeras)\n",
             "  Downloading aggdraw-1.3.18-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (993 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m993.7/993.7 kB\u001b[0m \u001b[31m16.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m993.7/993.7 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: aggdraw, visualkeras\n",
             "Successfully installed aggdraw-1.3.18 visualkeras-0.0.2\n"
           ]
@@ -91,22 +91,10 @@
         "! chmod 600 ~/.kaggle/kaggle.json"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FyUC5F5tIDut",
-        "outputId": "1ebbf63f-3096-4fbd-899a-a7a09e9cb1bd"
+        "id": "FyUC5F5tIDut"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -118,17 +106,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0uyKqm_IThr",
-        "outputId": "a37d8471-73e3-407b-bdd8-7d6c9b55c377"
+        "outputId": "3b95b389-84b7-42fb-92f2-ebaa9103ca01"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Downloading tyre-quality-classification.zip to /content\n",
-            "100% 2.66G/2.66G [02:29<00:00, 21.1MB/s]\n",
-            "100% 2.66G/2.66G [02:29<00:00, 19.1MB/s]\n"
+            "100% 2.66G/2.66G [01:33<00:00, 28.0MB/s]\n",
+            "100% 2.66G/2.66G [01:33<00:00, 30.7MB/s]\n"
           ]
         }
       ]
@@ -143,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ybvywUkuIarz",
-        "outputId": "63095b43-033f-4f59-b1a8-e6dbbbaf0691"
+        "outputId": "d83a6b82-a7bf-4ff1-ad28-4563e880a52f"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2037,7 +2025,7 @@
       "metadata": {
         "id": "Bh_1y0chJRbN"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2048,7 +2036,7 @@
       "metadata": {
         "id": "GhJA9eaJK4dj"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2064,10 +2052,23 @@
         "  os.path.join(outDir, '/Model')"
       ],
       "metadata": {
-        "id": "XwsDhhE4K3Xb"
+        "id": "XwsDhhE4K3Xb",
+        "outputId": "64b1c408-2875-45e1-e38e-a1d8164d21e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 18,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Output directory is not exists.......\n",
+            "making such directory...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2092,14 +2093,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XP3Z8-gDMLFq",
-        "outputId": "3d268194-bb31-4373-c310-0424ae1441d2"
+        "outputId": "47680a3c-7993-4e69-8df3-a15b6bd1735d"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Directory is not exists.......\n",
+            "making such directory...\n",
             "Directory is not exists.......\n",
             "making such directory...\n"
           ]
@@ -2108,29 +2111,71 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def takeDir(directory, nrows, ncols):\n",
+        "  labels = os.listdir(directory)\n",
+        "  for label in labels:\n",
+        "    print(label)\n",
+        "    plotPath = os.path.join(directory, label)\n",
+        "    plotImg(plotPath, nrows, ncols)\n",
+        "\n",
+        "\n",
+        "\n",
+        "def plotImg(path, nrows, ncols):\n",
+        "  selectedPath = np.random.choice(path, size = (ncols * nrows))\n",
+        "  sns.set()\n",
+        "  plt.figure(figsize = (16, 16))\n",
+        "  for i, path in enumerate(selectedPath):\n",
+        "    img = plt.imread(path)\n",
+        "    plt.subplot(nrows, ncols, i +1)\n",
+        "    plt.imshow(img)\n",
+        "  plt.show()"
+      ],
       "metadata": {
+        "id": "7QyvBvxuM1UR"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "takeDir(mainDir, 1, 5)"
+      ],
+      "metadata": {
+        "id": "s5IgWTYIM-aI",
+        "outputId": "6ae8d062-c75a-41f4-d661-acaa1f40bf2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "7QyvBvxuM1UR",
-        "outputId": "22adee09-574a-4871-fa66-4ae1d088d762"
+          "height": 494
+        }
       },
-      "execution_count": 21,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/content/output/Model'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 21
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "good\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-f5e084fd6682>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtakeDir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmainDir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-10-135ca19fe646>\u001b[0m in \u001b[0;36mtakeDir\u001b[0;34m(directory, nrows, ncols)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mplotPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mplotImg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplotPath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mncols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-10-135ca19fe646>\u001b[0m in \u001b[0;36mplotImg\u001b[0;34m(path, nrows, ncols)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplotImg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mncols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m   \u001b[0mselectedPath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mncols\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m   \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m   \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional or an integer"
+          ]
         }
       ]
     },
@@ -2138,7 +2183,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "s5IgWTYIM-aI"
+        "id": "2iyeObG4v9nP"
       },
       "execution_count": null,
       "outputs": []
